:bug: attempted fix for the background image on mobile safari

--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -46,7 +46,6 @@
   }
 }
 .learn-more--right  {
-  background-size: cover;
   display: block;
 
   @include tablet {
