--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,9 +32,14 @@ $button-background-color: transparent;
 }
 
 .has-bg-image {
-  background-attachment: fixed;
   background-color: $black;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  
+  &--fixed {
+    @include tablet {
+      background-attachment: fixed;
+    }
+  }
 }
